force-app/main/default/objects/Dummy14__c/Dummy14__c.object-meta.xml
<CustomObject>
    <label>Dummy14</label>
    <nameField>
        <label>Dummy14 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dummy14</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>