force-app/main/default/objects/Dummy14__c/fields/FooBar016__c.field-meta.xml
<CustomField>
    <fullName>FooBar016__c</fullName>
    <label>FooBar016</label>
    <length>255</length>
    <type>Text</type>
</CustomField>