force-app/main/default/objects/Dummy14__c/fields/FooBar065__c.field-meta.xml
<CustomField>
    <fullName>FooBar065__c</fullName>
    <label>FooBar065</label>
    <length>255</length>
    <type>Text</type>
</CustomField>