force-app/main/default/objects/Dummy14__c/fields/FooBar093__c.field-meta.xml
<CustomField>
    <fullName>FooBar093__c</fullName>
    <label>FooBar093</label>
    <length>255</length>
    <type>Text</type>
</CustomField>